--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styling/index.css">
+    <link rel="stylesheet" href="./index.css">
     <title>PROJECT Snake</title>
 </head>
 
@@ -30,7 +30,7 @@
         
     </div>
 
-    <script src="./JS/script.js"></script>
+    <script src="./script.js"></script>
 </body>
 
 </html>
